src/objects/Opportunity_Proposal_Waiting__c/Opportunity_Proposal_Waiting__c.object-meta.xml
<CustomObject>
    <label>Opportunity Proposal Waiting</label>
    <nameField>
        <displayFormat>OPROW-{0000000}</displayFormat>
        <label>Waiting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Proposal Waiting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>