src/objects/Opportunity_Proposal_Waiting__c/fields/Amendment_1_Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Amendment_1_Cycle_Time__c</fullName>
    <formula>Amendment_1_DateStrategyReview_Completed__c  -  Amendment_1_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment 1 Cycle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>