src/objects/Opportunity_Proposal_Waiting__c/fields/Amendment_3_Date_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_3_Date_Analysis_Completed__c</fullName>
    <label>Amendment 3 Date Analysis Completed</label>
    <type>Date</type>
</CustomField>