src/objects/Opportunity_Proposal_Waiting__c/fields/Amendment_3_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_3_Start_Date__c</fullName>
    <label>Amendment 3 Start Date</label>
    <type>Date</type>
</CustomField>