src/objects/Opportunity_Proposal_Waiting__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <formula>if(and(Expected_Date__c - if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;0, Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=10), &apos;+1 to 10&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;10,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=20), &apos;+11 to 20&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;20,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=30), &apos;+21 to 30&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;30,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=40), &apos;+31 to 40&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;40,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=50), &apos;+41 to 50&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;50,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;=60), &apos;+51 to 60&apos;,if(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;60, &apos;&gt;+60&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;0,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;=-10), &apos;-1 to 10&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-10,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;=-20),&apos;-11 to 20&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-20,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;=-30), &apos;-21 to 30&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-30,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;=-40), &apos;-31 to 40&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-40,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;=-50), &apos;-41 to 50&apos;,if(and(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-50,Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&gt;= -60), &apos;-51 to 60&apos;,if(Expected_Date__c -if(isnull(Submitted_to_Pricing_Date__c), TODAY(),Submitted_to_Pricing_Date__c )&lt;-60, &apos;&gt;-60&apos;,&apos;&apos;))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog</label>
    <type>Text</type>
</CustomField>