src/objects/Opportunity_Proposal_Waiting__c/fields/Competitor_1_Quote_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_Quote_Return_Date__c</fullName>
    <label>Competitor 1 Quote Return Date</label>
    <type>Date</type>
</CustomField>