src/objects/Opportunity_Proposal_Waiting__c/fields/Cost_Analysis_Status_4__c.field-meta.xml
<CustomField>
    <fullName>Cost_Analysis_Status_4__c</fullName>
    <description>Track number of days in each status.</description>
    <label>Cost Analysis Status 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Awaiting Supplier Inputs</fullName>
            </value>
            <value>
                <fullName>Awaiting Tech Eval</fullName>
            </value>
            <value>
                <fullName>In Analysis</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>