src/objects/Opportunity_Proposal_Waiting__c/fields/Estimated_Contract_Implemented_Date_5__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contract_Implemented_Date_5__c</fullName>
    <label>Estimated Contract Implemented Date 5</label>
    <type>Date</type>
</CustomField>