src/objects/Opportunity_Proposal_Waiting__c/fields/Govt_Sub_K_Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Govt_Sub_K_Cycle_Time__c</fullName>
    <formula>Contract_Implemented__c - Government_Sub_K_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Govt SubK Cycle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>