src/objects/Opportunity_Proposal_Waiting__c/fields/Govt_SubK_Cycle_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Govt_SubK_Cycle_Time_2__c</fullName>
    <formula>Contract_Implemented_2__c - Government_SubK_Assigned_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Govt SubK Cycle Time 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>