src/objects/Opportunity_Proposal_Waiting__c/fields/Govt_SubK_Cycle_Time_5__c.field-meta.xml
<CustomField>
    <fullName>Govt_SubK_Cycle_Time_5__c</fullName>
    <formula>Contract_Implemented_5__c -  Government_SubK_Assigned_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Govt SubK Cycle Time 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>