src/objects/Opportunity_Proposal_Waiting__c/fields/Negotiations_Complete_3__c.field-meta.xml
<CustomField>
    <fullName>Negotiations_Complete_3__c</fullName>
    <label>Negotiations Complete 3</label>
    <type>Date</type>
</CustomField>