src/objects/Opportunity_Proposal_Waiting__c/fields/SCO_Code__c.field-meta.xml
<CustomField>
    <fullName>SCO_Code__c</fullName>
    <label>SCO Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>