src/objects/Opportunity_Proposal_Waiting__c/fields/Supplier_FPY__c.field-meta.xml
<CustomField>
    <fullName>Supplier_FPY__c</fullName>
    <formula>IF(ISPICKVAL(Supplier_FPY_Cause__c,&apos;&apos;) ,&apos;Pass&apos;,&apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier FPY</label>
    <type>Text</type>
</CustomField>