src/objects/Opportunity_Proposal_Waiting__c/fields/Supplier_Proposed_Price_5__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Proposed_Price_5__c</fullName>
    <label>Supplier Proposed Price 5</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>