src/objects/Opportunity_Proposal_Waiting__c/fields/Supplier_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Rejected_Date__c</fullName>
    <label>Supplier Rejected Date</label>
    <type>Date</type>
</CustomField>