src/objects/Opportunity_Proposal_Waiting__c/fields/Tech_Eval_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Eval_Request_Date__c</fullName>
    <label>Tech Eval Request Date</label>
    <type>Date</type>
</CustomField>