src/objects/Opportunity_Proposal_Waiting__c/fields/TRB_Approval_3__c.field-meta.xml
<CustomField>
    <fullName>TRB_Approval_3__c</fullName>
    <label>TRB Approval 3</label>
    <type>Date</type>
</CustomField>