src/objects/Opportunity_Proposal_Waiting__c/fields/TRB_Presentation_3__c.field-meta.xml
<CustomField>
    <fullName>TRB_Presentation_3__c</fullName>
    <label>TRB Presentation 3</label>
    <type>Date</type>
</CustomField>