src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <label>Business</label>
</RecordType>