src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>false</active>
    <label>Certification</label>
</RecordType>