src/objects/Opportunity_Proposal_Waiting__c/recordTypes/CIJ.recordType-meta.xml
<RecordType>
    <fullName>CIJ</fullName>
    <active>true</active>
    <label>CIJ (Commercial Item Justification)</label>
</RecordType>