src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Engineering_BOEs.recordType-meta.xml
<RecordType>
    <fullName>Engineering_BOEs</fullName>
    <active>true</active>
    <label>Engineering (BOEs)</label>
</RecordType>