src/objects/Opportunity_Proposal_Waiting__c/recordTypes/ISC_CBOM.recordType-meta.xml
<RecordType>
    <fullName>ISC_CBOM</fullName>
    <active>true</active>
    <label>ISC (CBOM Analysis)</label>
</RecordType>