src/objects/Opportunity_Proposal_Waiting__c/recordTypes/ISC_CBOM_Quotes.recordType-meta.xml
<RecordType>
    <fullName>ISC_CBOM_Quotes</fullName>
    <active>true</active>
    <label>ISC (CBOM Quotes)</label>
</RecordType>