src/objects/Opportunity_Proposal_Waiting__c/recordTypes/ISC_Quotes_Sharepoint.recordType-meta.xml
<RecordType>
    <fullName>ISC_Quotes_Sharepoint</fullName>
    <active>true</active>
    <description>ISC Quotes (Sharepoint)</description>
    <label>ISC Quotes (Sharepoint)</label>
</RecordType>