src/objects/Opportunity_Proposal_Waiting__c/recordTypes/ISC_Vendor_Analysis.recordType-meta.xml
<RecordType>
    <fullName>ISC_Vendor_Analysis</fullName>
    <active>true</active>
    <label>ISC (Vendor Analysis)</label>
</RecordType>