src/objects/Opportunity_Proposal_Waiting__c/recordTypes/M_PM.recordType-meta.xml
<RecordType>
    <fullName>M_PM</fullName>
    <active>true</active>
    <description>Record Type Name changed from M&amp;PM to GBE</description>
    <label>GBE</label>
</RecordType>