src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>