src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Pricing_IDO.recordType-meta.xml
<RecordType>
    <fullName>Pricing_IDO</fullName>
    <active>false</active>
    <label>Pricing (IDO)</label>
</RecordType>