src/objects/Opportunity_Proposal_Waiting__c/recordTypes/Pursuit_Lead.recordType-meta.xml
<RecordType>
    <fullName>Pursuit_Lead</fullName>
    <active>false</active>
    <label>Pursuit Lead</label>
</RecordType>