src/objects/Opportunity_Proposal_Waiting__c/recordTypes/SEA_Approval.recordType-meta.xml
<RecordType>
    <fullName>SEA_Approval</fullName>
    <active>true</active>
    <label>SEA Approval</label>
</RecordType>