src/objects/Opportunity_Proposal_Waiting__c/validationRules/Approval_Date_Modify_by_Assigned_person.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Date_Modify_by_Assigned_person</fullName>
    <active>true</active>
    <description>SR#421957</description>
    <errorConditionFormula>ISCHANGED(Approval_Date__c) &amp;&amp; $User.Email != Assigned_To__r.Email &amp;&amp; RecordTypeId = &apos;012a0000001ZRYa&apos;</errorConditionFormula>
    <errorMessage>Approval Date can be Modified by only by the Assigned person</errorMessage>
</ValidationRule>