src/objects/Opportunity_Proposal_Waiting__c/validationRules/Assigned_to_field_is_limited.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_to_field_is_limited</fullName>
    <active>true</active>
    <description>SR#421957</description>
    <errorConditionFormula>RecordTypeId = &apos;012a0000001ZRYa&apos; &amp;&amp; ( Assigned_To__c != $Label.Susan_Johnson_contact_id) &amp;&amp; (Assigned_To__c != $Label.Hal_Miller_contact_id) &amp;&amp; (Assigned_To__c != null)</errorConditionFormula>
    <errorMessage>Assigned to field is limited to Hal Miller, Susan Johnson</errorMessage>
</ValidationRule>