src/objects/Opportunity_Proposal_Waiting__c/validationRules/Expiration_Date_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>And(  
RecordType.DeveloperName = &quot;ISC Waiting&quot;,
not(isBlank(Submitted_to_Pricing_Date__c )),
isBlank(Supplier_Expiration_Date__c )
)</errorConditionFormula>
    <errorMessage>Supplier Expiration Date must be entered</errorMessage>
</ValidationRule>