src/objects/Opportunity_Proposal_Waiting__c/validationRules/Request_and_Expected_Date_cannot_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_and_Expected_Date_cannot_change</fullName>
    <active>true</active>
    <errorConditionFormula>and( $User.Id != &apos;0051B00000DFik5&apos;,$User.Id != &apos;0051300000BcBBW&apos;,$User.Id != &apos;00530000006rrxc&apos;,$User.Id != &apos;0053000000448Sb&apos;,$User.Id != &apos;00530000006rmeo&apos;,$User.Id != &apos;005300000041m9d&apos;,$User.Id != &apos;00530000004zb4d&apos;,$User.Id != &apos;00530000006ri8O&apos;,OR(and(ISCHANGED(ISC_Kickoff__c),!isnull(priorvalue(ISC_Kickoff__c))), 
and(ISCHANGED(Supplier_Sent_Date__c),!isnull(priorvalue(Supplier_Sent_Date__c))), 
and(ISCHANGED(Supplier_Due_Date__c ),!isnull(priorvalue(Supplier_Due_Date__c ))), 
and(ISCHANGED(Supplier_Commit_Date__c),!isnull(priorvalue(Supplier_Commit_Date__c))), 
and(ISCHANGED(Supplier_Receipt_Date__c),!isnull(priorvalue(Supplier_Receipt_Date__c))), 
and(ISCHANGED(Submitted_to_Pricing_Date__c ),!isnull(priorvalue(Submitted_to_Pricing_Date__c)))))</errorConditionFormula>
    <errorMessage>ISC kickoff Date, Supplier Sent, Supplier Due Date,Supplier Commit Date, Supplier Receipt Date, Submitted to Pricing date cannot be changed once set</errorMessage>
</ValidationRule>