src/objects/Opportunity_Proposal_Waiting__c/validationRules/VR_for_Analysis_status_Completed_S_to_P.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_for_Analysis_status_Completed_S_to_P</fullName>
    <active>true</active>
    <description>Supplier Sent Date, Supplier Receipt Date, Supplier Proposed Price, Fair and Reasonable Price, Compliance Submission Date, Compliance Approval Date, Submitted to Pricing Date should be filled in order to save the record</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Analysis_Status__c , &quot;Completed - Sent To Pricing&quot;),
OR(
   ISBLANK( Supplier_Sent_Date__c ),
   ISBLANK( Supplier_Receipt_Date__c ),
   ISBLANK( Supplier_Proposed_Price__c ),
   ISBLANK( Analyst_Fair_and_Reasonable_Price__c ),
   ISBLANK( Compliance_Submission_Date__c ) ,
   ISBLANK( Internal_IPASS_Complete__c ),
   ISBLANK( Submitted_to_Pricing_Date__c )
   )
   )</errorConditionFormula>
    <errorMessage>Supplier Sent Date, Supplier Receipt Date, Supplier Proposed Price, Fair and Reasonable Price, Compliance Submission Date, Compliance Approval Date, Submitted to Pricing Date should be filled in order to save the record</errorMessage>
</ValidationRule>