src/objects/Opportunity_Proposal_Waiting__c/validationRules/VR_for_contract_implemented.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_for_contract_implemented</fullName>
    <active>true</active>
    <description>When GPC “Contract Implemented” date field is populated, the following must be filled out in order to Save</description>
    <errorConditionFormula>OR(
   AND(NOT(
           ISBLANK(Contract_Implemented__c)
           ),
      OR(
      ISBLANK( Government_Sub_K__c ),
      ISBLANK( Contract_Number__c ) ,
      ISBLANK( Negotiated_Price__c ) ,
      ISBLANK(Supplier_Proposed_Price__c ),
      ISBLANK( Transition_Supplier__c ) ,
      ISBLANK(Text( Contract_Type__c )),
      ISBLANK( of_parts__c )
        )
   ),
AND(NOT(
ISBLANK( Contract_Implemented_2__c )
),
OR(
ISBLANK( Government_SubK_2__c ),
ISBLANK( Contract_Number_2__c ) ,
ISBLANK( Negotiated_Price_2__c ) ,
ISBLANK( Supplier_Proposed_Price_2__c ),
ISBLANK( Transition_Supplier_2__c ) ,
ISBLANK(Text(Contract_Type_2__c )),
ISBLANK( of_parts_2__c )
)
),
AND(NOT(
ISBLANK( Contract_Implemented_3__c )
),
OR(
ISBLANK( Government_SubK_3__c ),
ISBLANK( Contract_Number_3__c ) ,
ISBLANK( Negotiated_Price_3__c ) ,
ISBLANK( Supplier_Proposed_Price_3__c ),
ISBLANK( Transition_Supplier_3__c ) ,
ISBLANK(Text(Contract_Type_3__c )),
ISBLANK( of_parts_3__c )
)
),
AND(NOT(
ISBLANK( Contract_Implemented_4__c )
),
OR(
ISBLANK( Government_SubK_4__c ),
ISBLANK( Contract_Number_4__c ) ,
ISBLANK( Negotiated_Price_4__c ) ,
ISBLANK( Supplier_Proposed_Price_4__c ),
ISBLANK( Transition_Supplier_4__c ) ,
ISBLANK(Text(Contract_Type_4__c )),
ISBLANK( of_parts_4__c )
)
),
AND(NOT(
ISBLANK( Contract_Implemented_5__c )
),
OR(
ISBLANK( Government_SubK_5__c ),
ISBLANK( Contract_Number_5__c ) ,
ISBLANK( Negotiated_Price_5__c ) ,
ISBLANK( Supplier_Proposed_Price_5__c ),
ISBLANK( Transition_Supplier_5__c ) ,
ISBLANK(Text(Contract_Type_5__c )),
ISBLANK( of_parts_5__c )
)
)
)</errorConditionFormula>
    <errorMessage>In each of the GPC sections(1,2,3,4,5) when “Contract Implemented” date field is populated, Government SubK,Contract Number,Negotiated Price,Supplier Proposed Price, Supplier,Contract Type,# of Parts</errorMessage>
</ValidationRule>