src/objects/Opportunity_Proposal_Waiting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Proposal_Priority_Level__c</columns>
    <columns>Proposal_Priority__c</columns>
    <columns>Opportunity_Proposal__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Input_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>