src/objects/Opportunity_Proposal_Waiting__c/listViews/All_Open_Bus_High.listView-meta.xml
<ListView>
    <fullName>All_Open_Bus_High</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Priority_Level__c</columns>
    <columns>Proposal_Priority__c</columns>
    <columns>Opportunity_Proposal__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Input_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal_Priority_Level__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <filters>
        <field>Received_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Input_Type__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <label>All Open Bus (High)</label>
</ListView>