src/objects/Opportunity_Proposal_Waiting__c/listViews/ISC_Waiting.listView-meta.xml
<ListView>
    <fullName>ISC_Waiting</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Priority_Level__c</columns>
    <columns>Proposal_Priority__c</columns>
    <columns>ISC_Cost_Analyst__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>ISC_Kickoff__c</columns>
    <columns>Analysis_Type__c</columns>
    <columns>Analysis_Status__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>Expected_Date_Revised__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Supplier_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity_Proposal_Waiting__c.ISC_Vendor_Analysis</value>
    </filters>
    <label>ISC Waiting</label>
</ListView>