src/objects/Opportunity_Proposal_Waiting__c/listViews/Kate_OPROWs.listView-meta.xml
<ListView>
    <fullName>Kate_OPROWs</fullName>
    <columns>NAME</columns>
    <columns>Analysis_Status__c</columns>
    <columns>Analysis_Type__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Approval_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Kate Smith</value>
    </filters>
    <label>Kate&apos;s OPROWs</label>
    <language>en_US</language>
</ListView>